--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -44,7 +44,9 @@ jobs:
         mkdir -p overlay.d/51custom/etc/pki/ca-trust/source/anchors
         echo -e "$INTERNAL_CA_CERT" > overlay.d/51custom/etc/pki/ca-trust/source/anchors/ca-cert.pem
 
-        echo "BUILD_TAG=$(date -u +'%Y%m%d.%H%M%S')" | sudo tee -a "$GITHUB_ENV"
+        FEDORA_VERSION=$(cat build-args.conf | grep BASE_VERSION= | sed 's/^BASE_VERSION=//')
+        echo "FEDORA_VERSION=$FEDORA_VERSION" | sudo tee -a "$GITHUB_ENV"
+        echo "BUILD_TAG=${FEDORA_VERSION}.$(date -u +'%Y%m%d.%H')" | sudo tee -a "$GITHUB_ENV"
 
     # Perl is blocked by upstream. Build keepalived without perl dependency.
     - name: Build keepalived package
@@ -57,9 +59,8 @@ jobs:
 
         mkdir -p $HOME/rpmbuild
         cd $HOME/rpmbuild
-        source /etc/os-release
 
-        git clone --depth 1 -b f$VERSION_ID \
+        git clone --depth 1 -b f$FEDORA_VERSION \
           https://src.fedoraproject.org/rpms/keepalived.git SOURCES/
         cd SOURCES
         spectool -gR keepalived.spec
