--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -37,6 +37,12 @@
   ],
   "packageRules": [
     {
+      "matchPackageNames": [
+        "quay.io/coreos-assembler/coreos-assembler"
+      ],
+      "pinDigests": false
+    },
+    {
       "matchDatasources": [
         "github-releases",
         "github-tags"
