--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -14,7 +14,7 @@ jobs:
       TAGS_KEEP: 6
     runs-on: builder-${{ github.event.repository.name }}
     container:
-      image: quay.io/coreos-assembler/coreos-assembler:latest@sha256:9bd6cbfe5908abb26263e7e63b6b3b916f4289fecb505117f1f40a534f3220c3
+      image: quay.io/coreos-assembler/coreos-assembler:latest
     permissions:
       contents: write
     steps:
